test/fails/bad_functions/bad_if2.lgl
void main() {
    if (true) {
        print 2.;
    }
    else {
        print 3.;
    }
    else if (true) {
        print 5.;
    }
}